<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Weather">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/topConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/cityText"
            android:textColor="@color/colorText"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:fontFamily="sans-serif"
            app:layout_constraintBottom_toTopOf="@id/curTempText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/curTempText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curTempText"
            android:textColor="@color/colorText"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/textText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cityText" />

        <TextView
            android:id="@+id/textText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/curTempText" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/curTempText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cityText">

            <TextView
                android:id="@+id/windText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/windText"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/humidText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/humid"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:layout_marginTop="10dp"
        android:paddingBottom="140dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topConstraint">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>